[fix] 24.04.01 약 봉투 저장시 예외처리 이름, 계정seq 값 필수
Change-Id: Iba732e4efa87daa3306c3b2b0261c51c3245794d