@@ -15,7 +15,6 @@ import java.util.ArrayDeque;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Queue;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -131,28 +130,24 @@ public class MedicineEnvelopService {
 
         HashMap<Long, String> colorCodeMap = new HashMap<>();
 
-        List<MedicineEnvelopDto> medicineEnvelopDtoList =
+        // stream 돌며 각 유저에 고유 색상코드를 할당합니다
+        return medicineEnvelopRepository.findMedicineEnvelopByUserSeq(userSeq, itemSeq).stream()
+            .map(envelop -> {
+                Long accountSeq = envelop.getAccountSeq();
 
-            // stream 돌며 각 유저에 고유 색상코드를 할당합니다
-            medicineEnvelopRepository.findMedicineEnvelopByUserSeq(userSeq, itemSeq).stream()
-                .map(envelop -> {
-                    Long accountSeq = envelop.getAccountSeq();
+                // 고유한 색상 코드를 할당하기 위해
+                // 'accountSeq'로 'colorCodeMap'에 매핑되었는지 확인합니다
+                if (!colorCodeMap.containsKey((Long) accountSeq)) {
 
-                    // 고유한 색상 코드를 할당하기 위해
-                    // 'accountSeq'로 'colorCodeMap'에 매핑되었는지 확인합니다
-                    if (!colorCodeMap.containsKey((Long) accountSeq)) {
+                    // colorCode 큐에서 색상 코드를 꺼내 accountSeq에 매핑합니다.
+                    colorCodeMap.put(accountSeq, colorCode.poll());
+                }
 
-                        // colorCode 큐에서 색상 코드를 꺼내 accountSeq에 매핑합니다.
-                        colorCodeMap.put(accountSeq, colorCode.poll());
-                    }
+                // 할당된 색상 코드를 현재 MedicineEnvelop 객체에 설정합니다.
+                envelop.setColor(colorCodeMap.get(accountSeq));
 
-                    // 할당된 색상 코드를 현재 MedicineEnvelop 객체에 설정합니다.
-                    envelop.setColor(colorCodeMap.get(accountSeq));
-
-                    return envelop;
-                })
-                .collect(Collectors.toList());
-
-        return medicineEnvelopDtoList;
+                return envelop;
+            })
+            .toList();
     }
 }
